# Task4_Game

./: CMakeLists.txt  Field.cpp  Field.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  Printer.cpp  Printer.h  main.cpp  maze.txt
Actions/: Action.h  ActionFactory.cpp  ActionFactory.h  PossibleActions.cpp  PossibleActions.h
Cells/: Cell.h  CellFactory.cpp  CellFactory.h  PossibleCells.cpp  PossibleCells.h
Exceptions/: Exception.cpp  Exception.h
Field/: Field.cpp  Field.h  GeneralField.cpp  GeneralField.h  OpenField.cpp  OpenField.h
Players/: Bot.cpp  Bot.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h
